# stm32-environment-probe

./: .gdbinit  .gitignore  CMakeLists.txt  README.md
Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
conf/: STM32L476RGTx_FLASH.ld  gdb_load  gdb_reset
tools/: start_local.sh
