PROJECT(stm32-environment-probe C CXX ASM)
set(CMAKE_VERBOSE_MAKEFILE off)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS cortex dma gpio i2c pwr rcc flash uart REQUIRED)

file(GLOB_RECURSE USER_SOURCES "Src/*.c")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    Inc
)

SET(STM32_MIN_HEAP_SIZE "0x200")
SET(STM32_MIN_STACK_SIZE "0x400")
SET(STM32_RAM_ORIGIN "0x20000000")
SET(STM32_RAM_SIZE "96K")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${USER_SOURCES} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})

add_definitions(-DSTM32L476RGT6)
add_definitions(-DSTM32L476RGx)
add_definitions(-DSTM32L476xx)
add_definitions(-DSTM32L4XX)
add_definitions(-DUSE_STDPERIPH_DRIVER)
add_definitions(-DUSE_STM32L4XX_NUCLEO)
add_definitions(-DUSE_HAL_DRIVER)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)

#0x20018000

add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
        COMMENT "Downloading..."
        COMMAND ${CMAKE_DEBUGER} -x \"${CMAKE_CURRENT_LIST_DIR}/conf/gdb_load\" --batch)